# agentic-coding-chatbot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
apps/admin/: next.config.js  package.json  vercel.json
apps/ai-agent/: package.json
apps/api/: package.json  tsconfig.json
apps/desktop/: package.json  tsconfig.json
apps/web/: next.config.js  package.json  tailwind.config.js  vercel.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: coding_agent.py
backend/app/api/: chat.py
backend/app/core/: config.py
backend/app/models/: chat.py
backend/app/tools/: code_tools.py  file_tools.py  registry.py  search_tools.py
django_backend/: .env.example  Dockerfile  render.yaml  requirements.txt
django_backend/agents/: coding_agent.py  hf_client.py
django_backend/chat/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
django_backend/config/: apps.py  asgi.py  settings.py  signals.py  urls.py
django_backend/tools/: code_tools.py  file_tools.py  registry.py  search_tools.py
docs/: typedoc.json
docs/api/: endpoints.md
docs/architecture/: overview.md
docs/deployment/: guide.md
docs/development/: setup.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css
infrastructure/docker/: admin.Dockerfile  ai-agent.Dockerfile  api.Dockerfile  web.Dockerfile  (+1 more)
scripts/: init-db.sql  seed.sh  start.sh
(+82 files in other folders)
